force-app/main/default/objects/Overheads_and_Profit_Rate_Types__c/Overheads_and_Profit_Rate_Types__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Overheads and Profit Rate Types</label>
</CustomObject>