force-app/main/default/objects/Overheads_and_Profit_Rate_Types__c/fields/I_RS_Default_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Default_Rate_Type__c</fullName>
    <label>Default Rate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>