force-app/main/default/objects/Overheads_and_Profit_Rate_Types__c/fields/I_RS_IP_Position__c.field-meta.xml
<CustomField>
    <fullName>I_RS_IP_Position__c</fullName>
    <label>IP Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>