force-app/main/default/objects/Overheads_and_Profit_Rate_Types__c/fields/I_RS_Publishing_Rights__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Publishing_Rights__c</fullName>
    <label>Publishing Rights for Budgeting Purposes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>