force-app/main/default/objects/Overheads_and_Profit_Rate_Types__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Project_Type__c</columns>
    <columns>I_RS_IP_Position__c</columns>
    <columns>I_RS_Publishing_Rights__c</columns>
    <columns>I_RS_Default_Rate_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>